src/test/ui/rfc-2632-const-trait-impl/super-traits-fail-2.yn.stderr
error: cannot call `<T as Foo>::a` because it is not `const`
  --> $DIR/super-traits-fail-2.rs:15:7
   |
LL | const fn foo<T: Bar>(x: &T) {
   |          --- required because of this
LL |     x.a();
   |       ^

error: aborting due to previous error

